--- a/style.css
+++ b/style.css
@@ -8,13 +8,34 @@
 }
 
 #tree-visualization {
-    border: 1px solid #000;
+    position: relative;
+    width: 100%;
     height: 400px;
+    border: 1px solid #000;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 20px;
 }
 
-#node-info {
-    margin-top: 20px;
-    font-size: 16px;
-    color: #333;
+.node {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.node.red {
+    background-color: red;
+}
+
+.node.black {
+    background-color: black;
 }
